fixed navbar covering

--- a/la-ola/src/index.css
+++ b/la-ola/src/index.css
@@ -56,6 +56,7 @@ li {
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top:80px;
 
 }
 
